--- a/pages/index.html
+++ b/pages/index.html
@@ -4,9 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/dist/output.css" rel="stylesheet">
     <title>Gerald Portfolio</title>
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
+<nav>
+    <h2>GERALD KAMAU</h2>
+    <ul class="navigation">
+        <li><a href="#about" class="nav-link">About</a></li>
+        <li><a href="#skills" class="nav-link">Skills</a></li>
+        <li><a href="#projects" class="nav-link">Projects</a></li>
+        <li><a href="#contact" class="nav-link">Contact</a>
+        <form>
+            <h2>Get In Touch With Me!</h2>
+            <div>
+                <label>Name</label>
+                <input type="text" value="Enter your name">
+            </div>
+            <div>
+                <label>Email</label>
+                <input type="text" value="Enter your email">
+            </div>
+            <div>
+                <label>Phone Number(Optional)</label>
+                <input type="text" value="Enter your phone number">
+            </div>
+            <div>
+                <label>Message</label>
+                <input type="text" value="Write your message">
+            </div>
+            <div>
+                <button>Submit</button>
+            </div>
+        </form>
+    </li>
+        <li><a href="#links" class="nav-link">Links</a></li>
+    </ul>
+</nav>
+
+<section class="descripton">
+    <h3>About Me</h3>
+    <p class="paragraph">
+        My name is Gerald Kamau. I am a developer currently studying at Moringa School in Kenya.
+    </p>
+
+</section>
     
+
 </body>
+<script src="index.js"></script>
 </html>
